x11proto-gl (1.4.10-1) UNRELEASED; urgency=low

  * All the code under the GLX Public License has been made available under
    the SGI Free Software License B, so remove GLXPL from debian/copyright.
  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Fri, 16 Jan 2009 08:34:55 +0100

x11proto-gl (1.4.9-2) unstable; urgency=low

  * Update debian/copyright to the SGI Free Software License B, version 2.0.
    It now mirrors the free X11 license used by X.Org.
    http://www.sgi.com/company_info/newsroom/press_releases/2008/september/opengl.html
    Not closing bug#368559 for now, because glxint.h is covered by the GLX
    Public License, which is still not free.

 -- Julien Cristau <jcristau@debian.org>  Sat, 20 Sep 2008 16:16:21 +0200

x11proto-gl (1.4.9-1) unstable; urgency=low

  [ Brice Goglin ]
  * Update the long description.
  * Add URL in debian/copyright.
  * Add XS-Vcs-* to debian/control.
  * Remove Fabio from Uploaders, with his permission.

  [ David Nusinow ]
  * New upstream version

 -- David Nusinow <dnusinow@debian.org>  Wed, 14 Nov 2007 22:47:03 -0500

x11proto-gl (1.4.8-1) unstable; urgency=low

  * New upstream release

 -- David Nusinow <dnusinow@debian.org>  Mon, 25 Sep 2006 21:25:16 -0400

x11proto-gl (1.4.7-2) UNRELEASED; urgency=low

  [ Andres Salomon ]
  * Test for obj-$(DEB_BUILD_GNU_TYPE) before creating it during build;
    idempotency fix. 

  [ Riccardo Setti ]
  * Now we ship the entire Licenses (closes: #368558) 

 -- Andres Salomon <dilinger@debian.org>  Mon, 17 Jul 2006 00:04:43 -0400

x11proto-gl (1.4.7-1) experimental; urgency=low

  * New upstream release
  * Move debhelper from build-depends-indep to build-depends because we use
    dh_clean in the clean target of debian/rules
  * Bump standards version to 3.7.2.0
  * Run dh_install with --list-missing
  * Bump debhelper compat to 5

 -- David Nusinow <dnusinow@debian.org>  Sat,  1 Jul 2006 22:40:35 -0400

x11proto-gl (1.4.6-2) unstable; urgency=low
